[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/decoration/saint.png" type="Texture" id=1]
[ext_resource path="res://scripts/saint.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.5, 8.625 )

[node name="saint" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 53, -115 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
flip_h = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 53, -11.375 )
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Button" type="Button" parent="."]
margin_left = 107.0
margin_top = -126.0
margin_right = 154.0
margin_bottom = -102.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_saint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_saint_body_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
